<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="60dp"
        app:columnCount="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:useDefaultMargins="true">
        android:background="white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/nameLabelTextView"
            style="@style/ItemLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_name"
            app:layout_column="0"
            app:layout_row="0" />

        <TextView
            android:id="@+id/phoneLabelTextView"
            style="@style/ItemLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_phone"
            app:layout_column="0"
            app:layout_row="1" />

        <TextView
            android:id="@+id/emailLabelTextView"
            style="@style/ItemLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_email"
            app:layout_column="0"
            app:layout_row="2" />

        <TextView
            android:id="@+id/streetLabelTextView"
            style="@style/ItemLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_street"
            app:layout_column="0"
            app:layout_row="3" />

        <TextView
            android:id="@+id/cityLabelTextView"
            style="@style/ItemLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_city"
            app:layout_column="0"
            app:layout_row="4" />

        <TextView
            android:id="@+id/stateLabelTextView"
            style="@style/ItemLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_state"
            app:layout_column="0"
            app:layout_row="5" />

        <TextView
            android:id="@+id/zipLabelTextView"
            style="@style/ItemLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_zip"
            app:layout_column="0"
            app:layout_row="6" />

        <TextView
            android:id="@+id/nameTextView"
            style="@style/ItemTextView"
            android:layout_width="wrap_content"
            android:elevation="@dimen/elevation"
            android:gravity="center"
            app:layout_column="1"
            app:layout_gravity="fill_horizontal"
            app:layout_row="0" />

        <TextView
            android:id="@+id/phoneTextView"
            style="@style/ItemTextView"
            android:elevation="@dimen/elevation"
            android:gravity="center"
            app:layout_column="1"
            app:layout_gravity="fill_horizontal"
            app:layout_row="1" />

        <TextView
            android:id="@+id/emailTextView"
            style="@style/ItemTextView"
            android:elevation="@dimen/elevation"
            android:gravity="center"
            app:layout_column="1"
            app:layout_gravity="fill_horizontal"
            app:layout_row="2" />

        <TextView
            android:id="@+id/streetTextView"
            style="@style/ItemTextView"
            android:elevation="@dimen/elevation"
            android:gravity="center"
            app:layout_column="1"
            app:layout_gravity="fill_horizontal"
            app:layout_row="3" />

        <TextView
            android:id="@+id/cityTextView"
            style="@style/ItemTextView"
            android:elevation="@dimen/elevation"
            android:gravity="center"
            app:layout_column="1"
            app:layout_gravity="fill_horizontal"
            app:layout_row="4" />

        <TextView
            android:id="@+id/stateTextView"
            style="@style/ItemTextView"
            android:elevation="@dimen/elevation"
            android:gravity="center"
            app:layout_column="1"
            app:layout_gravity="fill_horizontal"
            app:layout_row="5" />

        <TextView
            android:id="@+id/zipTextView"
            style="@style/ItemTextView"
            android:elevation="@dimen/elevation"
            android:gravity="center"
            app:layout_column="1"
            app:layout_gravity="fill_horizontal"
            app:layout_row="6" />

    </androidx.gridlayout.widget.GridLayout>


</ScrollView>